--- a/app/views/grade_scheme_elements/mass_edit.html.haml
+++ b/app/views/grade_scheme_elements/mass_edit.html.haml
@@ -7,8 +7,10 @@
   - if ! current_course.grade_scheme_elements.present?
     .italic Start by adding your highest level, and work your way down
 
-  .columns{'ng-app' => 'gradecraft', 'ng-controller' => 'GradeSchemeElementsCtrl'}
+  .element-container{'ng-app' => 'gradecraft', 'ng-controller' => 'GradeSchemeElementsCtrl'}
     .grade-scheme-elements
       .grade-scheme-element{'ng-repeat' => 'element in grade_scheme_elements', 'ng-include' => "'ng_gradeScheme.html'"}
-      %button{:type => 'submit', :class => 'button radius right', 'ng-click' => 'gradeService.postGradeSchemeElements()'} Submit
-      %button{:class => 'button radius right', 'ng-click' => 'gradeService.addFirst()', 'ng-hide' => 'gradeService.elements.length > 0'} Add Your Highest Grade
+      %button{:class => 'button right', 'ng-click' => 'gradeService.addFirst()', 'ng-hide' => 'gradeService.elements.length > 0'} Add Your Highest Grade
+    .submit-button 
+      %button{:type => 'submit', :class => 'button right', 'ng-click' => 'gradeService.postGradeSchemeElements()'} Submit
+      %br
