--- a/public/css/background.css
+++ b/public/css/background.css
@@ -4,8 +4,69 @@ body {
   position: relative;
 }
 
+.message-container {
+  background-color: #FFF;
+  width: 400px;
+  border-radius: 1rem;
+  opacity: .6;
+  font-family: Georgia, serif;
+  padding: 1rem;
+}
+
+.daylight.message-container {
+  margin: 100px 200px;
+}
+.stormy.message-container {
+  margin: 100px 600px;
+}
+
+.night.message-container {
+  margin: 200px 400px;
+  border: 1rem solid #002D62;
+}
+
+.message {
+  font-size: 2rem;
+  line-height: 3rem;
+}
+
+.back-to-site {
+  margin: 1rem 0 2rem ;
+}
+
+.back-to-site a {
+  float: right;
+  text-decoration: none;
+  font-weight: bold;
+  color: #1460AE;
+  border-bottom: 1px solid #999;
+}
+.back-to-site a:hover {
+  color: #1E267F;
+}
+ 
 .back-color-wash {
   background-color: #48BDEB;
+  z-index: -1000;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
+.stormy-color-wash {
+  background-color: #2E7B99;
+  z-index: -1000;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
+.night-color-wash {
+  background-color: #00162F;
   z-index: -1000;
   position: fixed;
   width: 100%;
@@ -66,6 +127,182 @@ body {
   position: absolute;
   background-color: white;
   opacity: .3;
+}
+
+.stormy-cloud-bubble {
+  position: absolute;
+  background-color: #333;
+  opacity: .5;
+}
+
+.star {
+  position: relative;
+  background-color: yellow;
+  opacity: .3;
+  width: 1px;
+  height: 1px;
+  border-radius: 1rem;
+}
+
+.star-1 {
+  left:  10px;
+  top: 200px;
+}
+.star-2 {
+  left:  20px;
+  top: 20px;
+}
+.star-3 {
+  left:  30px;
+  top: 400px;
+}
+.star-4 {
+  left:  40px;
+  top: 80px;
+}
+.star-5 {
+  left:  50px;
+  top: 20px;
+}
+.star-6 {
+  left:  60px;
+  top: 0px;
+}
+.star-7 {
+  left:  70px;
+  top: 100px;
+}
+.star-8 {
+  left:  80px;
+  top: 200px;
+}
+.star-9 {
+  left:  90px;
+  top: 30px;
+}
+.star-10 {
+  left:  100px;
+  top: 40px;
+}
+.star-11 {
+  left:  120px;
+  top: 10px;
+}
+.star-12 {
+  left:  125px;
+  top: 20px;
+}
+.star-13 {
+  left:  140px;
+  top: 400px;
+}
+.star-14 {
+  left:  150px;
+  top: 80px;
+}
+.star-15 {
+  left:  160px;
+  top: 320px;
+}
+.star-16 {
+  left:  170px;
+  top: 220px;
+}
+.star-17 {
+  left:  180px;
+  top: 100px;
+}
+.star-18 {
+  left:  200px;
+  top: 320px;
+}
+.star-19 {
+  left:  300px;
+  top: 240px;
+}
+.star-20 {
+  left:  400px;
+  top: 10px;
+}
+.star-21 {
+  left:  500px;
+  top: 30px;
+}
+.star-22 {
+  left:  600px;
+  top: 80px;
+}
+.star-23 {
+  left:  700px;
+  top: 200px;
+}
+.star-24 {
+  left:  800px;
+  top: 150px;
+}
+.star-25 {
+  left:  700px;
+  top: 50px;
+}
+.star-26 {
+  left:  900px;
+  top: 20px;
+}
+.star-27 {
+  left:  1200px;
+  top: 90px;
+}
+.star-28 {
+  left:  900px;
+  top: 60px;
+}
+.star-29 {
+  left:  10px;
+  top: 90px;
+}
+.star-30 {
+  left:  0px;
+  top: 20px;
+}
+.star-31 {
+  left:  850px;
+  top: 90px;
+}
+.star-32 {
+  left:  780px;
+  top: 150px;
+}
+.star-33 {
+  left: 920px;
+  top: 200px;
+}
+.star-34 {
+  left:  840px;
+  top: 80px;
+}
+.star-35 {
+  left:  1000px;
+  top: 200px;
+}
+.star-36 {
+  left:  870px;
+  top: 300px;
+}
+.star-37 {
+  left: 900px;
+  top: 30px;
+}
+.star-38 {
+  left: 650px;
+  top: 340px;
+}
+.star-39 {
+  left: 620px;
+  top: 190px;
+}
+.star-40 {
+  left: 528px;
+  top: 200px;
 }
 
 .cloud-bubble-1 {
@@ -224,9 +461,28 @@ body {
   z-index: -70;
 }
 
-.hidden {
-  visibility: hidden;
+.night-hill-position-1 {
+  background-color: #081F00;
+  position: absolute;
+  top: -13px;
+  left: -200px;
+  z-index: -50;
 }
+.night-hill-position-2 {
+  background-color: #436919;
+  position: absolute;
+  left: 200px;
+  z-index: -60;
+}
+.night-hill-position-3 {
+  background-color: #071C00;
+  position: absolute;
+  right: -300px;
+  top: -10px;
+  z-index: -70;
+}
+
+
 .mountain {
   position: absolute;
   z-index: -100;
