--- a/app/views/assignments/individual/_table_head.html.haml
+++ b/app/views/assignments/individual/_table_head.html.haml
@@ -11,6 +11,8 @@
     %th{:scope => "col"} Raw Score
     %th{:scope => "col"} Multiplied Score
 
+  %th{:scope => "col"} Read?
+
   - if @assignment.release_necessary?
     %th{:scope => "col"} Status
 
@@ -20,7 +22,7 @@
   %th{:style => "min-width: 180px"}
 
   - if @assignment.release_necessary? && @assignment.grades.present?
-    %th{"data-dynatable-no-sort" => "true"}  
+    %th{"data-dynatable-no-sort" => "true"}
       %ul.button-group.radius
         %li
           %a{:href => "#", :class => "button secondary select-all" } Check All
