modifying grade badge ui. adding logic for showing conditionally visible earned badges.

--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -207,12 +207,12 @@ button#remove-badges, button#add-badges
 
     &.available.unearned, &.awarded.earned
 
-    &.available.unearned-add-active
+    &.available.unearned-active
       transition:1s linear all
       box-shadow: 0 0 120px #F6C621
       opacity:0.92
 
-    &.awarded.earned-add-active
+    &.awarded.earned-active
       transition:1.5s linear all
       box-shadow: 0 0 150px #FFD017
       opacity:0.95
@@ -392,3 +392,6 @@ button#remove-badges, button#add-badges
     margin-top: -4px
     font-size: 1rem
     font-weight: bold
+
+.clear-left
+  clear: left !important
