refined styles for predictor page

--- a/app/assets/javascripts/angular/templates/ng_predictor_main.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_main.html.haml
@@ -2,8 +2,9 @@
 
 #predictor-main-header
   .collapse-all-toggler
-    .collapse-arrow.doubled
-    .collapse-arrow.doubled
+    .double-arrow
+      .collapse-arrow.doubled
+      .collapse-arrow.doubled
     .predictor-section-title
       .predictor-section-title-right{{'ng-if'=>'weightsAvailable()'}}
         .predictor-title-right-span
