--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -1,4 +1,4 @@
-/** Student Dashboard Styles **/
+// TODO: Remove unused styles, possibly many from old predictor are in here
 
 .announcement-notification-badge
   position: relative
