--- a/app/views/courses/predictor_settings.html.haml
+++ b/app/views/courses/predictor_settings.html.haml
@@ -18,36 +18,30 @@
 
       - @assignments.group_by(&:assignment_type).each do |assignment_type, assignments|
         %h4.subtitle= assignment_type.name
-        .columns
-          %table.responsive
-            %thead
-              %tr
-                %th= "#{term_for :assignment}"
-                %th Include in Predictor
-                %th Display Type
-                %th Preview
+        %table
+          %thead
+            %tr
+              %th= "#{term_for :assignment}"
+              %th Include in Predictor
+              %th Display Type
+              %th Preview
 
-            %tbody
-              - assignments.each do |assignment|
-                %tr
-                  %td
-                    = link_to assignment.name, assignment
-                  = f.simple_fields_for :assignments, assignment do |af|
-                    %td{:width => "10%"}= af.check_box :include_in_predictor
-                    %td= af.select :points_predictor_display, [[], ["Checkbox", "Fixed"], ["Select List"], ["Slider"], ]
-                    %td{:width => "25%"}
-                      - if assignment.include_in_predictor?
-                        - if assignment.select?
-                          = select_tag assignment.name, options_from_collection_for_select(assignment.score_levels,'value','name'), :class => 'point-value right', :id => "total-#{assignment.id}", :include_blank => true
-                        - elsif assignment.slider?
-                          - if assignment.score_levels.present?
-                            .slider{:max => assignment.point_total, :'data-scorelevelvals' => "#{assignment.score_levels.map(&:value)}", :'data-scorelevelnames' => "#{assignment.score_levels.map(&:name)}", :'data-highlight' => "true"}
-                          - else
-                            .slider{:max => assignment.point_total, :'data-highlight' => "true"}
-                        - else
-                          .slider{:max => assignment.point_total, :'data-highlight' => "true"}
+          %tbody
+            - assignments.each do |assignment|
+              %tr
+                %td
+                  = link_to assignment.name, assignment
+                = f.simple_fields_for :assignments, assignment do |af|
+                  %td{:width => "10%"}= af.check_box :include_in_predictor
+                  %td= af.select :points_predictor_display, [[], ["Checkbox", "Fixed"], ["Select List"], ["Slider"], ]
+                  %td{:width => "25%"}
+                    - if assignment.include_in_predictor?
+                      - if assignment.assignment_score_levels.present?
+                        .slider{:max => assignment.point_total, :'data-scorelevelvals' => "#{assignment.assignment_score_levels.map(&:value)}", :'data-scorelevelnames' => "#{assignment.assignment_score_levels.map(&:name)}", :'data-highlight' => "true"}
                       - else
-                        %input{:type => "checkbox" }
+                        .slider{:max => assignment.point_total, :'data-highlight' => "true"}
+                    - else
+                      %input{:type => "checkbox" }
       .right.form_buttons
         = f.button :submit, "Update Settings", :class => "button radius"
         = link_to 'Cancel', dashboard_path, :class => "button radius transparent"
