--- a/app/views/assignments/_unlock_condition_fields.haml
+++ b/app/views/assignments/_unlock_condition_fields.haml
@@ -8,7 +8,7 @@
     = f.input :condition_value, :label => "Min Points"
     = f.input :condition_date, as: :string, :include_blank => true, :input_html => { :class => 'datetimepicker', :value => f.try(:condition_date) }, :label => "Done By"
   #badges-list{:style => "display: none"}
-    = f.input :condition_id, :collection => current_course.badges.sorted.map { |l| [l.name, l.id] }, :include_blank => true, :label => "#{term_for :badge}"
+    = f.input :condition_id, :collection => current_course.badges.map { |l| [l.name, l.id] }, :include_blank => true, :label => "#{term_for :badge}"
     = f.input :condition_state, :collection => ["Earned"], :label => "State Achieved"
     = f.input :condition_value, :label => "Number of Times Earned"
     = f.input :condition_date, as: :string, :include_blank => true, :input_html => { :class => 'datetimepicker', :value => f.try(:condition_date) }, :label => "Done By"
