--- a/app/views/assignments/index.html.haml
+++ b/app/views/assignments/index.html.haml
@@ -37,7 +37,7 @@
                   %th Rubric?
                   %th{ :style => "min-width: 200px" }
               %tbody.sort-assignments
-                - assignments = assignment_type.assignments.includes(:rubric, :assignment_type).sorted
+                - assignments = assignment_type.assignments.includes(:rubric, :assignment_type)
                 - assignments.each do |assignment|
                   - cache ["v1", assignment] do
                     %tr{:id => "assignment-#{assignment.id}"}
