Cleaning up grading status page

--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -112,28 +112,28 @@ h5.section-title
 .assignment-name 
   display: inline
 
-.label.radius
-  font-size: 70%
-
-.label.radius a
+.label
+  font-size: 90%
+  text-transform: uppercase
+  padding: .25rem
+  border-radius: $global-radius
   color: #FFF
+  font-weight: normal
+  a
+    color: #FFF
 
-.label.radius a:hover
+.label a:hover
   color: $primary-color-4
 
-.label.right.radius.success
-  background-color: $secondary-color-2
+.label.success
+  background-color: $secondary-color-3
 
-.label.right.radius.fade
+.label.alert
+  background-color: $alert-color
+
+.label.fade
   background-color: lighten($color-grey-3, 15%)
   color: #000
 
-.label.right.radius.success, .label.right.radius.alert, .label.right.radius
-  span.has-tip
-    font-size: 120%
-    color: #FFF
-    font-weight: normal
-
 .uploaded-files
-  span.has-tip
-    font-weight: normal
+  font-weight: normal
