--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -167,7 +167,7 @@
 
   %section
     %h4 Multipliers
-    %span.has-tip{:title => "Multipliers allow students to 'boost' their grades on specific assignment types. You decide how many multipliers students can allocate, then the students select which assignment types will get a boost (through their dashboard) and those assignment type's points are multiplied by the number of multipliers that the student allocates.", :data => {'tooltip' => true} }
+    %span Multipliers allow students to 'boost' their grades on specific assignment types. You decide how many multipliers students can allocate, then the students select which assignment types will get a boost (through their dashboard) and those assignment type's points are multiplied by the number of multipliers that the student allocates.
 
     .form-item
       = f.label :total_assignment_weight, "Multiplier Count"
