--- a/app/views/assignments/_group_show.haml
+++ b/app/views/assignments/_group_show.haml
@@ -3,64 +3,62 @@
     - @groups.each do |group|
       %h4.subtitle
         = "#{group.name} Grades"
-      .small-12.columns
-        %h5.section-title
-          - group.submission_for_assignment(@assignment).tap do |submission|
-            - if submission
-              = link_to "See Submission", assignment_grade_path(@assignment.id, :group_id => group.id), :class => 'button radius'
-            - else
-              = link_to "Submit", new_assignment_submission_path(@assignment, @submission, :group_id => group.id), :class => 'button radius'
-          - if group.students.first.grade_for_assignment(@assignment).present?
-            = link_to "Edit Grade", group_grade_assignment_path(@assignment, :group_id => group), :class => 'button radius'
+      %h5.section-title
+        - group.submission_for_assignment(@assignment).tap do |submission|
+          - if submission
+            = link_to "See Submission", assignment_grade_path(@assignment.id, :group_id => group.id), :class => 'button'
           - else
-            = link_to "Grade", group_grade_assignment_path(@assignment, :group_id => group), :class => 'button radius'
+            = link_to "Submit", new_assignment_submission_path(@assignment, @submission, :group_id => group.id), :class => 'button'
+        - if group.students.first.grade_for_assignment(@assignment).present?
+          = link_to "Edit Grade", group_grade_assignment_path(@assignment, :group_id => group), :class => 'button'
+        - else
+          = link_to "Grade", group_grade_assignment_path(@assignment, :group_id => group), :class => 'button'
 
-      .small-12.columns
-        %table.responsive.nofeatures_dynatable.no_radius
-          %thead
+      %table.nofeatures_dynatable
+        %thead
+          %tr
+            %th= current_course.group_term
+            %th Score
+            %th Read?
+            - if @assignment.assignment_type.student_weightable?
+              %th Multiplied Scores
+            - if @assignment.has_levels?
+              %th Level
+            - if @assignment.release_necessary?
+              %th Status
+              %th
+                .button-bar
+                  %ul.button-group.right.radius
+                    %li
+                      %button.button.select-all.tiny= "Check All"
+                    %li
+                      %button.button.select-none.tiny= "Uncheck All"
+        %tbody
+          - group.students.each do |student|
+            - grade = @assignment.grades.find_by student_id: student
             %tr
-              %th= current_course.group_term
-              %th Score
-              %th Read?
+              %td= link_to student.name, student_path(student)
+              %td
+                - if grade.present? && grade.instructor_modified?
+                  = points grade.raw_score
+              %td
+                - if grade.present?
+                  - if grade.feedback_read?
+                    %i.fa.fa-check
+                  - elsif grade.feedback_reviewed?
+                    %i.fa.fa-eye
               - if @assignment.assignment_type.student_weightable?
-                %th Multiplied Scores
+                %td= points grade.score if grade
               - if @assignment.has_levels?
-                %th Level
+                %td
+                  - if grade
+                    = @assignment.grade_level(grade)
               - if @assignment.release_necessary?
-                %th Status
-                %th
-                  .button-bar
-                    %ul.button-group.right.radius
-                      %li
-                        %button.button.select-all.tiny= "Check All"
-                      %li
-                        %button.button.select-none.tiny= "Uncheck All"
-          %tbody
-            - group.students.each do |student|
-              - grade = @assignment.grades.find_by student_id: student
-              %tr
-                %td= link_to student.name, student_path(student)
-                %td
-                  - if grade.present? && grade.instructor_modified?
-                    = points grade.raw_score
-                %td
-                  - if grade.present?
-                    - if grade.feedback_read?
-                      %i.fa.fa-check
-                    - elsif grade.feedback_reviewed?
-                      %i.fa.fa-eye
-                - if @assignment.assignment_type.student_weightable?
-                  %td= points grade.score if grade
-                - if @assignment.has_levels?
-                  %td
-                    - if grade
-                      = @assignment.grade_level(grade)
-                - if @assignment.release_necessary?
-                  %td= grade.try(:status)
-                  %td.right
-                    - if grade && grade.is_graded?
-                      = check_box_tag "grade_ids[]", grade.id
-      .right.columns
+                %td= grade.try(:status)
+                %td.right
+                  - if grade && grade.is_graded?
+                    = check_box_tag "grade_ids[]", grade.id
+      .right
         - if @assignment.release_necessary? && @assignment.grades.present?
           = submit_tag "Update Grade Statuses", :class => "button"
 - else
