--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -22,45 +22,41 @@
   
   %h4
     - if @group.approved?
-      .label.right.radius.success
+      .label.right.success
         = "Status: #{@group.approved}"
     - elsif @group.rejected?
-      .label.right.radius.alert
+      .label.right.alert
         = "Status: #{@group.approved}"
     - else
-      .label.right.radius
+      .label.right
         .icon
           .icon-tooltip
             This #{term_for :group} must be approved by your instructor before you can proceed
           %i.fa.fa-flag
           Status: Pending
 
-    .small-12.medium-3.columns
-      %h4 #{term_for :assignments}:
-      %ul
-        - @group.assignment_groups.each do |ag|
-          %li= link_to ag.assignment.name, ag.assignment
+    %h4 #{term_for :assignments}:
+    %ul
+      - @group.assignment_groups.each do |ag|
+        %li= link_to ag.assignment.name, ag.assignment
 
-    .small-12.medium-3.columns
-      %h4
-        Members:
-      %ul
-        - @group.group_memberships.each do |gm|
-          - if current_user_is_staff?
-            %li= link_to gm.student.name, student_path(gm.student)
-          - else
-            %li= gm.student.name
+    %h4
+      Members:
+    %ul
+      - @group.group_memberships.each do |gm|
+        - if current_user_is_staff?
+          %li= link_to gm.student.name, student_path(gm.student)
+        - else
+          %li= gm.student.name
 
-    .small-12.medium-4.columns
-      - if @group.text_feedback?
-        %h4 Instructor Feedback:
-        %p= raw @group.try(:text_feedback)
+    - if @group.text_feedback?
+      %h4 Instructor Feedback:
+      %p= raw @group.try(:text_feedback)
 
-    .small-12.columns
-      - i = 1
-      - @group.proposals.order_by_creation_date.each do |p|
-        .panel
-          %h4.bold= "Proposal ##{i}: #{p.title}"
-          %h6= "Created: #{p.created_at}"
-          %p= p.proposal
-        - i += 1
+    - i = 1
+    - @group.proposals.order_by_creation_date.each do |p|
+      .panel
+        %h4.bold= "Proposal ##{i}: #{p.title}"
+        %h6= "Created: #{p.created_at}"
+        %p= p.proposal
+      - i += 1
