revived teams display on top 10/bottom 10

--- a/app/views/analytics/top_10.html.haml
+++ b/app/views/analytics/top_10.html.haml
@@ -12,3 +12,6 @@
   %h4.subtitle Bottom 10
 
   = render 'students_table', :course => current_course, :students => @bottom_ten_students
+
+  %h4.subtitle #{term_for :team} Overview
+  = render 'teams_table', :course => current_course, :teams => current_course.teams
