--- a/app/views/analytics/per_assign.html.haml
+++ b/app/views/analytics/per_assign.html.haml
@@ -11,7 +11,7 @@
       - if assignments_for_type.select {|a| a.grades.graded_or_released.length > 1}.present?
         %h4.subtitle= assignment_type.name
 
-      %table.responsive.nopage_dynatable
+      %table.nopage_dynatable
         %caption.sr-only= assignment_type.name
         %thead
           %tr
