Removed unused badging tables

--- a/app/views/info/_in_progress_grades_table.haml
+++ b/app/views/info/_in_progress_grades_table.haml
@@ -49,4 +49,4 @@
                   %td
                     .center= check_box_tag "grade_ids[]", g.id
         .right.form_buttons
-          = submit_tag "Update Selected Grade Statuses", :class => "button radius"
+          = submit_tag "Update Selected Grade Statuses", :class => "button"
